--- a/FrontEnd/EatON.html
+++ b/FrontEnd/EatON.html
@@ -9,6 +9,8 @@
 		<!--css here-->
 		<link rel="stylesheet" href="EatON.css">
 		<title>EatON</title>
+		<!--jquery here-->
+		<script src="jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
 		<form id="EatON" name="EatON" action="EatON.html" method="get">
