--- a/FrontEnd/EatON4.html
+++ b/FrontEnd/EatON4.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 		<!--css here-->
 		<link rel="stylesheet" href="EatON.css">
+		<!--jquery here-->
+		<script src="jquery-3.3.1.min.js"></script>
 		<title>EatON</title>
 	</head>
 	<body>
