--- a/FrontEnd/EatON2.html
+++ b/FrontEnd/EatON2.html
@@ -43,6 +43,6 @@
 			</label></li>
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
-		</ul>
+		</form>
 	</body>
 </html>
