--- a/FrontEnd/EatON3.html
+++ b/FrontEnd/EatON3.html
@@ -30,6 +30,6 @@
 			</label></li>
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
-		</ul>
+		</form>
 	</body>
 </html>
