--- a/FrontEnd/EatON.html
+++ b/FrontEnd/EatON.html
@@ -48,6 +48,6 @@
 			</label></li>
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
-		</ul>
+		</form>
 	</body>
 </html>
