--- a/FrontEnd/EatON.html
+++ b/FrontEnd/EatON.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<form id="EatON" name="EatON" action="EatON.html" method="get">
-			<h1>EatON</h1>
+			<img src="EatON.png" alt="EatON_Logo" height="150" width="150"></img>
 			<h3>User Input: </h3>
 			<li><label>
 				<font size="3">Age: </font><input type="number" id="Age" name="Age">
