--- a/FrontEnd/EatON4.html
+++ b/FrontEnd/EatON4.html
@@ -14,7 +14,7 @@
 		<title>EatON</title>
 	</head>
 	<body>
-		<h1>EatON</h1>
+		<img src="EatON.png" alt="EatON_Logo" height="150" width="150"></img>
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
