--- a/FrontEnd/testEatON.html
+++ b/FrontEnd/testEatON.html
@@ -2,7 +2,7 @@
 	<head>
 		<!--javascript here-->
 		<script>
-			alert("This is the version foir tesating jquery to python. ");
+			alert("This is the version foir testing jquery to python. ");
 		</script>
 		<!--bootstrap here-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
