--- a/FrontEnd/EatON2.html
+++ b/FrontEnd/EatON2.html
@@ -14,32 +14,32 @@
 	</head>
 	<body>
 		<form id="EatON" name="EatON" action="EatON.html" method="get">
-			<img src="EatON.png" alt="EatON_Logo" height="150" width="150"></img>
+			<img src="..\EatON.png" alt="EatON_Logo" height="150" width="150"></img>
 			<h3>Daily Requirement: </h3>
 			<li><label>
-				<font size="3">Calorie: </font><input type="number" id="DCal" name="DCal">
+				<font size="3">Calorie: </font><br><input type="number" id="DCal" name="DCal" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Carbohydrate: </font><input type="number" id="DCarb" name="DCarb">
+				<font size="3">Carbohydrate: </font><br><input type="number" id="DCarb" name="DCarb" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Protein: </font><input type="number" id="DPro" name="DPro">
+				<font size="3">Protein: </font><br><input type="number" id="DPro" name="DPro" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Fat: </font><input type="number" id="DFat" name="DFat">
+				<font size="3">Fat: </font><br><input type="number" id="DFat" name="DFat" placeholder="(Cal)"><font size="3">Cal </font>
 			</label></li>
 			<h3>Consumed today: </h3>
 			<li><label>
-				<font size="3">Calorie: </font><input type="number" id="CCal" name="CCal">
+				<font size="3">Calorie: </font><br><input type="number" id="CCal" name="CCal" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Carbohydrate: </font><input type="number" id="CCarb" name="CCarb">
+				<font size="3">Carbohydrate: </font><br><input type="number" id="CCarb" name="CCarb" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Protein: </font><input type="number" id="CPro" name="CPro">
+				<font size="3">Protein: </font><br><input type="number" id="CPro" name="CPro" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Fat: </font><input type="number" id="CFat" name="CFat">
+				<font size="3">Fat: </font><br><input type="number" id="CFat" name="CFat" placeholder="(Cal)"><font size="3">Cal </font>
 			</label></li>
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
