--- a/FrontEnd/EatON2.html
+++ b/FrontEnd/EatON2.html
@@ -17,7 +17,7 @@
 			<img src="..\EatON.png" alt="EatON_Logo" height="150" width="150"></img>
 			<h3>Daily Requirement: </h3>
 			<li><label>
-				<font size="3">Calorie: </font><br><input type="number" id="DCal" name="DCal" placeholder="(grams)"><font size="3">g </font>
+				<font size="3">Calorie: </font><br><input type="number" id="DCal" name="DCal" placeholder="(Cal)"><font size="3">g </font>
 			</label></li>
 			<li><label>
 				<font size="3">Carbohydrate: </font><br><input type="number" id="DCarb" name="DCarb" placeholder="(grams)"><font size="3">g </font>
@@ -26,11 +26,11 @@
 				<font size="3">Protein: </font><br><input type="number" id="DPro" name="DPro" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Fat: </font><br><input type="number" id="DFat" name="DFat" placeholder="(Cal)"><font size="3">Cal </font>
+				<font size="3">Fat: </font><br><input type="number" id="DFat" name="DFat" placeholder="(grams)"><font size="3">Cal </font>
 			</label></li>
 			<h3>Consumed today: </h3>
 			<li><label>
-				<font size="3">Calorie: </font><br><input type="number" id="CCal" name="CCal" placeholder="(grams)"><font size="3">g </font>
+				<font size="3">Calorie: </font><br><input type="number" id="CCal" name="CCal" placeholder="(Cal)"><font size="3">g </font>
 			</label></li>
 			<li><label>
 				<font size="3">Carbohydrate: </font><br><input type="number" id="CCarb" name="CCarb" placeholder="(grams)"><font size="3">g </font>
@@ -39,7 +39,7 @@
 				<font size="3">Protein: </font><br><input type="number" id="CPro" name="CPro" placeholder="(grams)"><font size="3">g </font>
 			</label></li>
 			<li><label>
-				<font size="3">Fat: </font><br><input type="number" id="CFat" name="CFat" placeholder="(Cal)"><font size="3">Cal </font>
+				<font size="3">Fat: </font><br><input type="number" id="CFat" name="CFat" placeholder="(grams)"><font size="3">Cal </font>
 			</label></li>
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
