--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
 		<title>EatON</title>
 	</head>
 	<body>
+		<div class="contentcontainer">
 		<form id="EatON" name="EatON" action="Recommend.php" method="POST" onsubmit="return checkForm()">
 			<!--<h1>EatON</h1>-->
 			<img src="..\EatON.png" alt="EatON_Logo" height="150" width="150"></img>
@@ -44,5 +45,6 @@
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
 		</form>
+	</div>
 	</body>
 </html>
