--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<!--bootstrap here-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 		<!--css here-->
-		<link rel="stylesheet" href="EatON.css">
+		<link rel="stylesheet" href="..\EatON.css">
 		<!--Javascript here-->
 		<script src="EatON.js"></script>
 		<!--jquery here-->
