--- a/html/index.html
+++ b/html/index.html
@@ -13,9 +13,10 @@
 	</head>
 	<body>
 		<div class="contentcontainer">
+			<img src="..\EatONbanner.png" class="banner">
 		<form id="EatON" name="EatON" action="Recommend.php" method="POST" onsubmit="return checkForm()">
 			<!--<h1>EatON</h1>-->
-			<img src="..\EatON.png" alt="EatON_Logo" height="150" width="150"></img>
+			<!-- <img src="..\EatON.png" alt="EatON_Logo" height="150" width="150"></img> -->
 			<h3>Daily Requirement/Limit: </h3>
 			<li><label>
 				<font size="3">Calorie: </font><br><input type="number" step="1" min="0" id="RCal" name="RCal" placeholder="(Cal)" required><font size="3">Cal </font>
