--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,9 @@
 		<title>EatON</title>
 	</head>
 	<body>
-		<div class="contentcontainer">
+		<!-- <div class="contentcontainer"> -->
 			<img src="..\EatONbanner.png" class="banner">
-		<form id="EatON" name="EatON" action="Recommend.php" method="POST" onsubmit="return checkForm()">
+		<form class="form" id="EatON" name="EatON" action="Recommend.php" method="POST" onsubmit="return checkForm()">
 			<!--<h1>EatON</h1>-->
 			<!-- <img src="..\EatON.png" alt="EatON_Logo" height="150" width="150"></img> -->
 			<h3>Daily Requirement/Limit: </h3>
@@ -47,6 +47,6 @@
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
 		</form>
-	</div>
+	<!-- </div> -->
 	</body>
 </html>
