--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 			</label></li>
 			<h3>What would you like to look for? </h3>
 			<li><label>
-				<font size="3">Search Term: </font><br><input type="text" id="Term" name="Term" maxlength="20" placeholder="(ex: chicken, kale, etc. )" required>
+				<font size="3">Search Term: </font><br><input type="text" id="Term" name="Term" maxlength="20" placeholder="(ex: chicken, kale, etc. )">
 			</label></li>
 			<br>
 			<button type="submit" form="EatON" value="Search">Search</button>
